# SinestesiaMusical

./: .dockerignore  .gitignore  .replit  Dockerfile  HANDOFF.md  Musical SPiral create images.py  Musical frequency reader.py  PyGame Spiral ANimation.py  Pygame Animation+analysis.py  README.md  Spiral Create Images Single Color.py  analysis.py  app.py  cache.py  engines.py  mdx.py  pitch.py  precompute.py  pyproject.toml  render.yaml  replit.md  reprecompute_hd.py  requirements.txt  stems.py  validate_pitch.py  validate_stems.py
.agents/memory/: MEMORY.md  deployment-target-choice.md  youtube-downloads.md  youtube-ytdlp-downloads.md
docs/: precompute-worker.md  visualizer-v2-research.md
scripts/: post-merge.sh  run_pot_provider.sh  setup_pot_provider.sh  start.sh
templates/: index.html
tests/: conftest.py  test_app_robustness.py  test_cache.py  test_engines_v3.py  test_ml.py  test_phase5.py
