[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pygame>=2.6.1",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "yt-dlp>=2026.7.4",
]
